update paper