@@ -14,16 +14,16 @@
 &emsp;&emsp;&emsp;<a href="#11">2.8.1. java堆溢出</a>  
 &emsp;&emsp;&emsp;<a href="#12">2.8.2. 虚拟机栈和本地方法栈溢出</a>  
 &emsp;&emsp;&emsp;<a href="#13">2.8.3. 方法区和运行时常量池溢出</a>  
-&emsp;&emsp;<a href="#14">2.9. 应用</a>  
-&emsp;<a href="#15">3. 垃圾收集器与内存分配策略</a>  
-&emsp;&emsp;<a href="#16">3.1. 判断对象是否已死的方法</a>  
-&emsp;&emsp;<a href="#17">3.2. 回收方法区</a>  
-&emsp;&emsp;<a href="#18">3.3. 垃圾收集算法</a>  
-&emsp;&emsp;&emsp;<a href="#19">3.3.1. 标记-清除算法</a>  
-&emsp;&emsp;&emsp;<a href="#20">3.3.2. 标记-复制算法</a>  
-&emsp;&emsp;&emsp;<a href="#21">3.3.3. 标记-整理算法</a>  
-&emsp;&emsp;<a href="#22">3.4. 新生代垃圾回收</a>  
-&emsp;&emsp;&emsp;<a href="#23">3.4.1. 相关问题</a>  
+&emsp;&emsp;&emsp;<a href="#14">2.8.4. 本机直接内存溢出</a>  
+&emsp;&emsp;<a href="#15">2.9. 应用</a>  
+&emsp;<a href="#16">3. 垃圾收集器与内存分配策略</a>  
+&emsp;&emsp;<a href="#17">3.1. 判断对象是否已死的方法</a>  
+&emsp;&emsp;<a href="#18">3.2. 回收方法区</a>  
+&emsp;&emsp;<a href="#19">3.3. 垃圾收集算法</a>  
+&emsp;&emsp;&emsp;<a href="#20">3.3.1. 标记-清除算法</a>  
+&emsp;&emsp;&emsp;<a href="#21">3.3.2. 标记-复制算法</a>  
+&emsp;&emsp;&emsp;<a href="#22">3.3.3. 标记-整理算法</a>  
+&emsp;&emsp;<a href="#23">3.4. 新生代垃圾回收</a>  
 &emsp;&emsp;<a href="#24">3.5. 经典的垃圾收集器</a>  
 &emsp;&emsp;&emsp;<a href="#25">3.5.1. Serial收集器</a>  
 &emsp;&emsp;&emsp;<a href="#26">3.5.2. Serial Old收集器</a>  
@@ -45,64 +45,65 @@
 &emsp;<a href="#42">5. 类文件</a>  
 &emsp;&emsp;<a href="#43">5.1. 类文件结构</a>  
 &emsp;&emsp;<a href="#44">5.2. 双亲委派模型</a>  
-&emsp;&emsp;&emsp;<a href="#45">5.2.1. 自定义类加载器</a>  
+&emsp;&emsp;&emsp;<a href="#45">5.2.1. 双亲委派模型缺陷</a>  
 &emsp;&emsp;&emsp;<a href="#46">5.2.2. 破坏双亲委派模型</a>  
 &emsp;&emsp;&emsp;&emsp;<a href="#47">5.2.2.1. JDBC破坏双亲委派模型</a>  
-&emsp;&emsp;<a href="#48">5.3. 类初始化的时机</a>  
-&emsp;&emsp;<a href="#49">5.4. 类的生命周期</a>  
-&emsp;&emsp;&emsp;<a href="#50">5.4.1. 加载</a>  
-&emsp;&emsp;&emsp;<a href="#51">5.4.2. 验证</a>  
-&emsp;&emsp;&emsp;<a href="#52">5.4.3. 准备</a>  
-&emsp;&emsp;&emsp;<a href="#53">5.4.4. 解析</a>  
-&emsp;&emsp;&emsp;<a href="#54">5.4.5. 初始化</a>  
-&emsp;&emsp;&emsp;<a href="#55">5.4.6. 卸载</a>  
-&emsp;<a href="#56">6. 对象创建及使用</a>  
-&emsp;&emsp;<a href="#57">6.1. 对象分配内存的方式</a>  
-&emsp;&emsp;<a href="#58">6.2. 对象内存分布</a>  
-&emsp;&emsp;<a href="#59">6.3. 对象的访问</a>  
-&emsp;&emsp;<a href="#60">6.4. 对象引用</a>  
-&emsp;&emsp;<a href="#61">6.5. 栈上分配</a>  
-&emsp;&emsp;&emsp;<a href="#62">6.5.1. 逃逸分析</a>  
-&emsp;&emsp;&emsp;<a href="#63">6.5.2. 标量替换</a>  
-&emsp;&emsp;&emsp;<a href="#64">6.5.3. 应用</a>  
-&emsp;&emsp;<a href="#65">6.6. TLAB</a>  
-&emsp;&emsp;<a href="#66">6.7. 对象内存分配流程</a>  
-&emsp;<a href="#67">7. JDK编译期</a>  
-&emsp;&emsp;<a href="#68">7.1. 编译期做的工作</a>  
-&emsp;<a href="#69">8. 堆内存的设置要点</a>  
-&emsp;<a href="#70">9. CMS + ParNew收集器的流程梳理</a>  
-&emsp;&emsp;<a href="#71">9.1. young区域(年轻代)</a>  
-&emsp;&emsp;<a href="#72">9.2. old区域(老年代)</a>  
-&emsp;&emsp;&emsp;<a href="#73">9.2.1. CMS GC原因</a>  
-&emsp;&emsp;&emsp;<a href="#74">9.2.2. CMS GC 垃圾回收模式</a>  
-&emsp;&emsp;&emsp;<a href="#75">9.2.3. 其他老年代问题</a>  
-&emsp;&emsp;<a href="#76">9.3. 相关文章</a>  
-&emsp;<a href="#77">10. Java虚拟机内存调优</a>  
-&emsp;&emsp;<a href="#78">10.1. 基本概念重述</a>  
-&emsp;&emsp;&emsp;<a href="#79">10.1.1. 工具整理</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#80">10.1.1.1. 命令行终端</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#81">10.1.1.2. 可视化界面</a>  
-&emsp;&emsp;<a href="#82">10.2. GC 调优目的</a>  
-&emsp;&emsp;<a href="#83">10.3. GC 调优策略</a>  
-&emsp;&emsp;<a href="#84">10.4. 调优指标</a>  
-&emsp;&emsp;<a href="#85">10.5. 问题排查思路</a>  
-&emsp;&emsp;<a href="#86">10.6. 案例</a>  
-&emsp;&emsp;&emsp;<a href="#87">10.6.1. 美团技术案例（基于CMS JDK1.8）</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#88">10.6.1.1. 场景一：动态扩容引起的空间震荡</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#89">10.6.1.2. 场景二：显式 GC 的去与留 (System.gc)</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#90">10.6.1.3. 场景三：MetaSpace 区 OOM</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#91">10.6.1.4. 场景四：过早晋升 </a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#92">10.6.1.5. 场景五：CMS Old GC 频繁 </a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#93">10.6.1.6. 场景六：单次 CMS Old GC 耗时长</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#94">10.6.1.7. 场景七：内存碎片&收集器退化</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#95">10.6.1.8. 场景八：堆外内存 OOM</a>  
-&emsp;&emsp;&emsp;&emsp;<a href="#96">10.6.1.9. 场景九：JNI 引发的 GC 问题</a>  
-&emsp;&emsp;&emsp;<a href="#97">10.6.2. 不恰当的数据结构导致内存过大</a>  
-&emsp;&emsp;&emsp;<a href="#98">10.6.3. 堆外内存导致溢出错误</a>  
-&emsp;&emsp;&emsp;<a href="#99">10.6.4. 异步系统Socket连接</a>  
-&emsp;&emsp;&emsp;<a href="#100">10.6.5. Evosuite 自动生成单元测试</a>  
-&emsp;&emsp;&emsp;<a href="#101">10.6.6. 其他案例分析资料</a>  
-&emsp;&emsp;&emsp;<a href="#102">10.6.7. 其他建议</a>  
+&emsp;&emsp;&emsp;<a href="#48">5.2.3. 自定义类加载器</a>  
+&emsp;&emsp;<a href="#49">5.3. 类初始化的时机</a>  
+&emsp;&emsp;<a href="#50">5.4. 类的生命周期</a>  
+&emsp;&emsp;&emsp;<a href="#51">5.4.1. 加载</a>  
+&emsp;&emsp;&emsp;<a href="#52">5.4.2. 验证</a>  
+&emsp;&emsp;&emsp;<a href="#53">5.4.3. 准备</a>  
+&emsp;&emsp;&emsp;<a href="#54">5.4.4. 解析</a>  
+&emsp;&emsp;&emsp;<a href="#55">5.4.5. 初始化</a>  
+&emsp;&emsp;&emsp;<a href="#56">5.4.6. 卸载</a>  
+&emsp;<a href="#57">6. 对象创建及使用</a>  
+&emsp;&emsp;<a href="#58">6.1. 对象分配内存的方式</a>  
+&emsp;&emsp;<a href="#59">6.2. 对象内存分布</a>  
+&emsp;&emsp;<a href="#60">6.3. 对象的访问</a>  
+&emsp;&emsp;<a href="#61">6.4. 对象引用</a>  
+&emsp;&emsp;<a href="#62">6.5. 栈上分配</a>  
+&emsp;&emsp;&emsp;<a href="#63">6.5.1. 逃逸分析</a>  
+&emsp;&emsp;&emsp;<a href="#64">6.5.2. 标量替换</a>  
+&emsp;&emsp;&emsp;<a href="#65">6.5.3. 应用</a>  
+&emsp;&emsp;<a href="#66">6.6. TLAB</a>  
+&emsp;&emsp;<a href="#67">6.7. 对象内存分配流程</a>  
+&emsp;<a href="#68">7. JDK编译期</a>  
+&emsp;&emsp;<a href="#69">7.1. 编译期做的工作</a>  
+&emsp;<a href="#70">8. 堆内存的设置要点</a>  
+&emsp;<a href="#71">9. CMS + ParNew收集器的流程梳理</a>  
+&emsp;&emsp;<a href="#72">9.1. young区域(年轻代)</a>  
+&emsp;&emsp;<a href="#73">9.2. old区域(老年代)</a>  
+&emsp;&emsp;&emsp;<a href="#74">9.2.1. CMS GC原因</a>  
+&emsp;&emsp;&emsp;<a href="#75">9.2.2. CMS GC 垃圾回收模式</a>  
+&emsp;&emsp;&emsp;<a href="#76">9.2.3. 其他老年代问题</a>  
+&emsp;&emsp;<a href="#77">9.3. 相关文章</a>  
+&emsp;<a href="#78">10. Java虚拟机内存调优</a>  
+&emsp;&emsp;<a href="#79">10.1. 基本概念重述</a>  
+&emsp;&emsp;&emsp;<a href="#80">10.1.1. 工具整理</a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#81">10.1.1.1. 命令行终端</a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#82">10.1.1.2. 可视化界面</a>  
+&emsp;&emsp;<a href="#83">10.2. GC 调优目的</a>  
+&emsp;&emsp;<a href="#84">10.3. GC 调优策略</a>  
+&emsp;&emsp;<a href="#85">10.4. 调优指标</a>  
+&emsp;&emsp;<a href="#86">10.5. 问题排查思路</a>  
+&emsp;&emsp;<a href="#87">10.6. 案例</a>  
+&emsp;&emsp;&emsp;<a href="#88">10.6.1. 美团技术案例（基于CMS JDK1.8）</a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#89">10.6.1.1. 场景一：动态扩容引起的空间震荡</a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#90">10.6.1.2. 场景二：显式 GC 的去与留 (System.gc)</a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#91">10.6.1.3. 场景三：MetaSpace 区 OOM</a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#92">10.6.1.4. 场景四：过早晋升 </a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#93">10.6.1.5. 场景五：CMS Old GC 频繁 </a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#94">10.6.1.6. 场景六：单次 CMS Old GC 耗时长</a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#95">10.6.1.7. 场景七：内存碎片&收集器退化</a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#96">10.6.1.8. 场景八：堆外内存 OOM</a>  
+&emsp;&emsp;&emsp;&emsp;<a href="#97">10.6.1.9. 场景九：JNI 引发的 GC 问题</a>  
+&emsp;&emsp;&emsp;<a href="#98">10.6.2. 不恰当的数据结构导致内存过大</a>  
+&emsp;&emsp;&emsp;<a href="#99">10.6.3. 堆外内存导致溢出错误</a>  
+&emsp;&emsp;&emsp;<a href="#100">10.6.4. 异步系统Socket连接</a>  
+&emsp;&emsp;&emsp;<a href="#101">10.6.5. Evosuite 自动生成单元测试</a>  
+&emsp;&emsp;&emsp;<a href="#102">10.6.6. 其他案例分析资料</a>  
+&emsp;&emsp;&emsp;<a href="#103">10.6.7. 其他建议</a>  
 # <a name="0">JVM </a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 大部分参考周志明【深入理解Java虚拟机】
 - 附上官网文档搭配食用 [java8官网文档](https://docs.oracle.com/javase/specs/jvms/se8/html/index.html)
@@ -263,10 +264,78 @@ public class JavaVMStackOOM {
 
 #### <a name="13">方法区和运行时常量池溢出</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
-
-### <a name="14">应用</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+JDK1.7之前会产生永久代内存溢出的情况，而之后会产生内存溢出的情况，因为常量池移动到堆中了。
 ```java
+// 运行时常量池溢出导致内存溢出 jdk7中
+// 参数： -Xmx6M -XX:MaxMetaspaceSize=6M -XX:PermSize=6M
+public class RuntimeConstantPoolOOM {
+    public static void main(String[] args) {
+        Set<String> set = new HashSet<>();
+        short i = 0;
+        while (true) {
+            set.add(String.valueOf(i++).intern());
+        }
+    }
+}
+```
 
+字节码增强生成大量的动态类导致的溢出
+```java
+// 借助CGlib 使方法区出现永久代内存溢出异常，在JDK7中导致内存空间溢出
+// java 8 不会出现问题
+public class JavaMethodAreaOOM {
+    public static void main(String[] args) {
+        while (true) {
+            Enhancer enhancer = new Enhancer();
+            enhancer.setSuperclass(OOMObject.class);
+            enhancer.setUseCache(true);
+            enhancer.setCallback(new MethodInterceptor() {
+                @Override
+                public Object intercept(Object o, Method method, Object[] objects, MethodProxy methodProxy) throws Throwable {
+                    return methodProxy.invokeSuper(o, args);
+                }
+            });
+            enhancer.create();
+        }
+    }
+
+    static class OOMObject{
+
+    }
+}
+```
+
+#### <a name="14">本机直接内存溢出</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+特征是Heap dump很小，而程序中又间接使用了DirectMemory(如NIO)
+```java
+//* 参数：-Xmx20M -XX:MaxDirectMemorySize=10M
+//* 本机直接内存溢出
+//*
+//*  -XX:MaxDirectMemorySize 用于指定直接内存大小
+//* 真正申请内存分配的方法Unsafe::allocateMemory()
+public class DirectMemoryOOM {
+    private static final int _1MB = 1024*1024;
+
+    public static void main(String[] args) throws IllegalAccessException {
+        Field unsafeField = Unsafe.class.getDeclaredFields()[0];
+        unsafeField.setAccessible(true);
+        Unsafe unsafe = (Unsafe)unsafeField.get(null);
+        while (true) {
+            unsafe.allocateMemory(_1MB);
+        }
+    }
+
+    /**
+     * Exception in thread "main" java.lang.OutOfMemoryError
+     * 	at sun.misc.Unsafe.allocateMemory(Native Method)
+     * 	at com.learning.jvm.memory.DirectMemoryOOM.main(DirectMemoryOOM.java:27)
+     */
+}
+```
+### <a name="15">应用</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+
+TODO 该demo有问题
+```java
 public class JHSDB_TestCase {
 
     static class Test {
@@ -293,10 +362,10 @@ staticObj随着Test的信息类型存放在方法区，instantObj随着Test对�
 - instantObj对象存放在Eden Java堆中
 - localObj对象存放在Eden Java堆中
 
-## <a name="15">垃圾收集器与内存分配策略</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+## <a name="16">垃圾收集器与内存分配策略</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 程序计数器、虚拟机栈、本地方法栈3个区域随线程而生而灭，因此这几个区域的内存分配和回收都具备确定性，不需要过多考虑回收问题。
 
-### <a name="16">判断对象是否已死的方法</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="17">判断对象是否已死的方法</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 引用计数法：
 - 定义：在对象中添加一个引用计数器，有一个地方引用时，计数器值加一，引用失效时减一。
 - 优点：原理简单，判定效率也很高。
@@ -313,7 +382,7 @@ staticObj随着Test的信息类型存放在方法区，instantObj随着Test对�
      6. 所有被同步锁(synchronize关键字)持有的对象。
      7. 反映Java虚拟机内部情况的JMXBean、JVMTI中注册的回调、本地缓存代码等。
 
-### <a name="17">回收方法区</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="18">回收方法区</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 方法区的回收主要是两部分内容：废弃的常量和不再使用的类型。
 - 废弃的常量的例子：字符创常量进入到常量池中，但当前系统有没有任何一个字符串对象的值为“java”，则该常量就会被系统清理出常量池。
 - 不在使用的类，需同时满足一下三个条件：
@@ -321,21 +390,21 @@ staticObj随着Test的信息类型存放在方法区，instantObj随着Test对�
   - 加载该类的类加载器已经被回收。正常很难达成。如OSGi、JSP的重加载会产生。
   - 该类对应的java.lang.Class对象没有在任何地方被引用，无法在任何地方通过反射访问该类的方法。
   
-### <a name="18">垃圾收集算法</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="19">垃圾收集算法</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 弱分代假说：绝大多数对象都是朝生夕灭。\
-强分代假说：熬过越多次垃圾手机过程的对象就越难消亡。\
+强分代假说：熬过越多次垃圾收集过程的对象就越难消亡。\
 跨代引用假说：存在于新生代的对象可能会引用老年代的对象。因此该假说说明的是，存在互相引用关系的对象，是应该倾向于同时生存或者同时死亡。
 - 解决方案，在新生代上建立一个全局的数据结构（记忆集），这个结构把老年代划分成若干小块，表示出老年代的哪一块内存会存在跨代引用。之后发生Minor GC时，只有包含跨代引用的小块内存才会加入到GC Root的扫描.
 
 
-#### <a name="19">标记-清除算法</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="20">标记-清除算法</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 定义：算法分为两个阶段，一个阶段就是标记出所有需要回收的对象，在标记完成后，统一回收掉所有标记的对象，当然也可以反过来标记存活的对象，统一回收未标记对象。
 
 缺点：
 1. 执行效率不稳定，如果java堆中包含大量对象，并且其中大部分是需要回收的，当对象的数量增长，标记跟清除的执行效率都会越来越低。
 2. 内存碎片化问题，标记跟清除之后会产生大量不连续的内存碎片，空间碎片太多可能导致后续程序在分配大对象的时候不得不触发另一次垃圾收集动作。
 
-#### <a name="20">标记-复制算法</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="21">标记-复制算法</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 定义:为了解决标记算法面对大量可回收对象时执行效率低及空间碎片化的问题，该算法将内存分为两个大小相等的空间，每次只使用其中一块。当一块的内存使用完了，就将还存货的对象复制到另一块上去，然后把已使用过的空间一次性清理干净。
 
 缺点：
@@ -343,7 +412,7 @@ staticObj随着Test的信息类型存放在方法区，instantObj随着Test对�
 2. 将可用的对象内存缩小为原来的一半，空间浪费未免太多了。
 3. 老年代一般不直接使用该算法，因为老年代对象存货率较高，复制开销太大。针对100%都存活的极端情况，
    
-#### <a name="21">标记-整理算法</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="22">标记-整理算法</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 定义：与标记-清除算法本质区别为，移动存活的对象。而移动回收后存活的对象是一项优缺点并存的风险决策。
 
 移动对象的优缺点:
@@ -352,7 +421,7 @@ staticObj随着Test的信息类型存放在方法区，instantObj随着Test对�
 - 综合的解决方案，平常都是用标记-清除算法，直到空间碎片化已经影响到对象分配，再使用标记-整理算法。
 
 
-### <a name="22">新生代垃圾回收</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="23">新生代垃圾回收</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 1. eden、 survivor From 复制到 survivor To，年龄+1。
 > 首先，把 Eden 和 survivor From 区域中存活的对象复制到 survivor To 区域（如果有对象的年龄以及达到了老年的标准，则赋值到老年代区），同时把这些对象的年龄+1（如果 ServicorTo 不够位置了就放到老年区）；
 2. 清空 eden、 survivor From。
@@ -362,7 +431,8 @@ staticObj随着Test的信息类型存放在方法区，instantObj随着Test对�
 ![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/basic/edenGc.jpg)
 
 
-#### <a name="23">相关问题</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+**相关问题**
+
 为什么需要Survivor区域？
 > 防止对象过早进入Old，导致Old频繁Full GC。Survivor具有预筛选保证，只有对象到一定岁数才会送往老年代，Survivor区可以减少被送到老年代的对象，进而减少Full GC发生。
 
@@ -422,29 +492,63 @@ staticObj随着Test的信息类型存放在方法区，instantObj随着Test对�
 #### <a name="30">CMS(Concurrent Mark Sweep)收集器</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 定义：一种以获取最短回收停顿时间为目标的收集器，工作于老年代。
 
-运行过程解析：基于标记-清除算法实现，具体步骤如下，
-- 初始标记：仅仅标记一下GC Root对象能直接关联到的对象，速度很快，需要暂停所有线程。
-- 并发标记：从GC Root关联对象开始遍历整个对象图的过程，可以与用户线程共同执行。
-- 重新标记：因用户程序继续运行而导致标记产生变动的那部分对象的标记记录，通常比初始标记长远比并发标记段。
-- 并发清除：清理删除掉标记阶段判断的已经死亡的对象，由于不需要移动对象，因此可以与用户线程共同执行。
+--- 
+**深入理解Java虚拟机中CMS流程说明：**
+
+运行过程解析，基于标记-清除算法实现，具体大流程步骤如下：
+1. 初始标记：仅仅标记一下GC Root对象能直接关联到的对象，速度很快，需要暂停所有线程。
+2. 并发标记：从GC Root关联对象开始遍历整个对象图的过程，可以与用户线程共同执行。
+3. 重新标记：因用户程序继续运行而导致标记产生变动的那部分对象的标记记录，通常比初始标记长远比并发标记段。
+4. 并发清除：清理删除掉标记阶段判断的已经死亡的对象，由于不需要移动对象，因此可以与用户线程共同执行。
+
+![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/jvm/cms-1.jpg)
+
+---
+**实战Java虚拟机中流程说明：**
+
+主要流程:
+1. 初始标记：STW，标记根对象。
+2. 并发标记：标记所有对象。
+3. 预清理：清理前准备以及控制停顿时间
+4. 重新标记：STW，修正并发标记数据
+5. 并发清理：清理垃圾
+6. 并发重置
+
+预清理：预清理是并发的，除了为正式清理做准备和检查以外，与清理还会尝试控制一次停顿时间。由于重新标记是独占CPU的，**如果新声代GC后，立即触发一次重新标记，那么一次停顿时间可能很长**。为了避免这种情况，预清理时，会可以等待一次新声代GC的发生，然后根据历史性能数据预测下一次新生代GC可能发生的时间，在当前时间和预测时间的中间时刻进行重新标记。最大程度上避免新生代GC和重新标记重合，尽可能减少一次停顿时间。
+> 开关`-XX:-CMSPrecleaningEnabled` 用来开关预清理
+
+![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/jvm/cms-process.png)
+
+
+--- 
+
 
 特点：
 1. 对处理器资源非常敏感。CMS默认启动的回收线程数是(处理器数量+3)/4，因此若核心数量在4个以上，占用CPU不超过25%。若核心数量小于4，则占用内存过大。
-2. 无法处理“浮动垃圾”，有可能出现并发模式失败进而导致一次Full GC。浮动垃圾为出现在标记过程结束之后产生的对象。因为CMS要支持手机过程中与用户线程并存，因此不能在老年代几乎被填满时再运行，需要预留一部分空间供并发收集的程序运行。
-    - JDK5中设置CMS在老年代使用了68%便会激活，JDK6默认的设置提高到92%。当运行预留的内存无法满足程序分配新对象的需要，就会出现一次“并发失败”。后备预案为冻结用户线程，启用Serial Old进行老年代的垃圾收集。
-    - `-XX:CMSInitiatingOccupancyFraction `可以设置触发CMS收集的百分比。
+2. 无法处理“浮动垃圾”，有可能出现并发模式失败进而导致一次Full GC。浮动垃圾为出现在标记过程结束之后产生的对象。因为CMS要支持收集过程中与用户线程并存，因此不能在老年代几乎被填满时再运行，需要预留一部分空间供并发收集的程序运行。
+    > JDK5中设置CMS在老年代使用了68%便会激活，JDK6默认的设置提高到92%。当运行预留的内存无法满足程序分配新对象的需要，就会出现一次“并发失败”。后备预案为冻结用户线程，启用Serial Old进行老年代的垃圾收集。\
 > 并发收集失败：收集过程中，老年代被填满；收集完成后，收集的空间仍然无法满足被使用；浮动垃圾
-- 参数-XX:CMSFullGCsBeforeCompaction：作用是要求CMS收集器在执行过若干次不整理的Full GC之后，下一次先进行碎片整理(默认值为0，表示每次FullGC都进行碎片整理)
-  
-[CMS官网说明](https://docs.oracle.com/javase/8/docs/technotes/guides/vm/gctuning/cms.html#concurrent_mode_failure)
+- 参数-XX:CMSFullGCsBeforeCompaction：作用是要求CMS收集器在执行过若干次不整理的Full GC之后，下一次先进行碎片整理
 
-![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/jvm/cms-1.jpg)
+常用参数:
+- `-XX:+UseConcMarkSweepGC`: 启用 CMS 回收器
+- `-XX:ConcGCThreads`和`-XX:ParallelCMSThreads`：用来指定GC并发线程数量
+- `-XX:CMSinitiatingOccupancyFraction`：可以设置触发CMS收集的百分比。
+- `-XX:CMSFullGCsBeforeCompaction`： 参数可以用于设定进行多少次CMS回收后，进行一次内存压缩。(默认值为0，表示每次FullGC都进行碎片整理)
+- `-XX:+UseCMSCompactAtFullCollection`：开关可以使CMS在垃圾收集完成后，进行一次内存碎片整理，内存碎片的整理不是并发进行的。
+- `-XX:-CMSPrecleaningEnabled`：用来开关预清理
+
+相关文章：
+[CMS官网说明](https://docs.oracle.com/javase/8/docs/technotes/guides/vm/gctuning/cms.html#concurrent_mode_failure)
 
 #### <a name="31">Garbage First 收集器</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 定义：面向服务端应用的垃圾收集器，基于Region的堆内存布局进行垃圾收集，每一个Region都可以根据需要扮演新生代的Eden空间、Survivor空间和老年代空间。Region中还有一类特殊的Humongous区域，专门用来存储大对象，G1认为只要超过了一个Region一半的对象即可认为是大对象。对于Humongous区域，正常当做老年代一部分。
 
-- 参数Region的大小可通过-XX:G1HeapRegionSize设定，取值范围为1M~32M，为2的N次幂。
-- 用户设定的允许收集停顿时间使用参数-XX:MaxGCPauseMills指定，默认为200毫秒。调的调小会导致每次的回收集只占内存的很小一部分，收集的速度慢于分配的速度导致垃圾堆积，进而引发Full GC。正常设置为100~300毫秒之间。
+
+---
+
+
+**深入理解Java虚拟机中CMS流程说明：**
 
 运行步骤：
 1. 初始标记：标记GC Root对象能直接关联的对象并修改TAMS指针的值为正确的空区域。需要暂停线程，但是时间很短，借用进行Minor GC时同步完成。
@@ -454,17 +558,115 @@ staticObj随着Test的信息类型存放在方法区，instantObj随着Test对�
 
 G1整体是基于标记-整理算法实现的收集器，但从局部优势基于标记-复制算法实现。在执行标记整理的时候，还进行了压缩的工作，这是之前的垃圾收集器都没有的。
 
-特点:
-1. 避免在整个Java堆进行全区域的垃圾回收，而是让G1跟踪每个Region的垃圾回收的价值及回收所需的时间，在后台维护一个优先级表。根据用户设定的允许收集停顿时间，优先回收价值收益最大的Region。(使用参数-XX:MaxGCPauseMills指定)
-2. G1收集器每个Region都需要自己的记忆集，记录跨区域引用，因此比其他收集器要耗费内存，大约为java堆内存容量10%~20%。
-3. 通过在Region中划分空间(使用两TAMS指针，标记一块区域)用于并发回收的新对象分配，解决并发标记阶段与用户线程互不干扰。同样若内存分配速度大于内存回收速度，也许冻结用户线程Full GC。
-4. CMS使用增量更新算法，而G1使用原始快照(SATB)算法来解决，用户线程改变对象的引用关系，不打破原有的对象图结构，防止标记错误。
-5. 通过可靠停顿预测模型的建立：根据每个Region的回收成本，分析出收集的平均值、标准偏差、置信度等统计信息。
-- 缺点：内存占用过高，在小内存应用上CMS的表现大于G1。
-  
 ![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/jvm/g1.jpg)
 ![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/jvm/g1-memory.jpg)
 
+---
+**实战Java虚拟机中流程说明：**
+
+收集过程：
+1. 新生代GC
+2. 并发标记周期
+3. 混合收集
+4. 如果需要会进行Full GC
+
+
+**并发标记周期**
+
+执行流程
+1. 初始标记: 标记从根节点直接可达的对象。这个阶段会伴随一次新生代GC，产生全局停顿。
+2. 根区域扫描: 由于初始标记必然伴随一次新生代GC，存活对象均移入survivor区。将扫描由**survivor区**直接可达的老年代区域(根区域扫描依赖survivor区对象)。如果同时需要新生代GC，那么GC就需要等待根区域扫描结束后才能进行。
+3. 并发标记: 扫描并查找整个堆的存活对象，并发过程可被新生代GC打断。
+4. 重新标记: CMS一样，重新标记也是会产生应用程序停顿的由于在并发标记过程中，应用程序依然在运行，因此标记结果可能需要进行修正，所以在此对上一次的标记结果进行补充。在G1中，这个过程使用SATB(Snapshot At-The-Beginning)算法完成,G1会在标记之初为存活对象创建个快照，这个快照有助于加速重新标记的速度。
+5. 独占清理: 这个阶段是会引起停顿的，它将计算各个区域的存活对象和GC回收比例并进行排序，识别可供混合回收的区域 在这个阶段，还会更新记忆集(Remembered Set), 该阶段给出了需要被混合回收的区域并进行了标记，在混合回收阶段，需要这些信息。
+6. 井发清理阶段: 这里会识别并清理完全空闲的区域 它是井发的清理，不会引起停顿。
+
+![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/jvm/g1-concurrent-process.png)
+
+由于并发标记周期包含一次新生代GC，故新生代会被整理。但由于并发标记周期执行时，应用程序依然在运行。因此，并发标记周期结束后，又会有新的Eden空间被使用。并发标记周期执行前后最大的不同是在该阶段后，系统增加了一些标记为G的区域。这些区域被标记，是因为它们内部的垃圾比例较高，因此希望在后续的混合GC中进行收集（注意在并发标记周期中并未正式收集这些区域〉。
+
+**并发回收阶段前后的可能情况**
+![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/jvm/g1-concurrent-alloc.png)
+
+**混合回收**
+
+定义：在并发标记周期中，虽然有部分对象被回收，但是总体上说，回收的比例是相当低的。但是在并发标记周期后，己经明确知道哪些区域含有比较多的垃圾对象，在混合回收阶段，就可以专门针对这些区域进行回收。当然G1会优先回收垃圾比例较高的区域，因为回收这些区域的性价比也比较高。这个阶段叫作混合回收。
+
+![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/jvm/g1-alloc.png)
+
+混合GC会执行多次，直到回收了足够多的内存空间，然后，它会触发一次新生代GC。新生代GC后，又可能会发生一次并发标记周期的处理。最后，又会起混合GC的执行。
+![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/jvm/g1-MixedGC.png)
+
+**必要时的Full GC**
+
+并发收集由于让应用程序和GC线程交替工作，因此总是不能完全避免在特别繁忙的场合会出现在回收过程中内存不充足的情况。当遇到这种情况时，G1会转入一个Full GC进行回收。
+> 如果在混合GC时发生空间不足或者在新生代GC时，survivor区和老年代无法容纳幸存对象，都会导致一次Full GC产生。
+
+记忆集是G1中维护的一个数据结构，简称RS(Remembered Set)。每一个G1区域都有一个RS与之关联。\
+作用：由G1回收时，是按照区域回收的，如在回收区域A的对象 ，很可能并不回收区域B的对象。为了避免在整个堆中进行对象的可达性扫描。因此，G1在区域RS中，记录了在区域A中被其他区域引用的对象，这样在回收区域A时，只要将RS视为区域A根集的一部分即可，从而可避免做整个堆的扫描。
+
+G1日志的一些术语：
+- CT(Card Table): RS 就是依靠 CardTab 来记录哪些是存活对象的：
+- CSet(Collection Sets): Collection Sets表示被选取的、将要被收集的区域的集合
+- Ref Proc(处理弱引用、软引用的时间)
+- RefEnq(弱引用、软引用入队时间)
+- Free CSet(释放被回收的CSet中区域的时间，包括它们的RS)。
+
+```
+1 . 619 : [GC pause (young) (init al-mark) 0 . 03848843 secs] 
+[Parallel Time : 38 . 0 ms] 
+[GC Worker Start (ms) : 1619.3 1619 . 3 1619 . 3 1619 . 3 
+Avg : 1619 . 3 , Min : 1619 . 3 , Max : 1619 . 3, Diff : 0.0] 
+[Ext Root Scanning (ms) : 0 . 3 0.3 0.2 0 . 2 
+Avg : 0 . 3 , Min : 0 . 2 , Max : 0 . 3 , Diff : 0.1] 
+[Update RS (ms) : 5 . 7 5 . 4 2 8 . O 5 . 3 
+Avg : 11 . 1 , Min : 5 . 3 , Max: 28 . 0 , Diff : 22.8] 
+[Processed Buffers : 5 4 1 4 
+Sum : 14 , Avg : 3 , Min : 1 , Max : 5, Diff : 4] 
+[Scan RS (ms) : 4 . 6 5 . 0 0 . 0 5 . 2 
+Avg : 3 . 7 , Min : 0.0 , Max: 5 . 2 , Diff : 5 . 2] 
+[Object Copy (ms): 27.4 27 . 3 9 . 6 27 . 2 
+Avg : 22 . 9 , Min : 9 . 6 , Max : 27 . 4 , Diff : 17.7) 
+[Term nat on (ms) : 0 . 1 0. 0 0 . 0 0 . 1 
+Avg : 0 . 0 , Min: 0.0 , Max: 0 . 1, Diff : 0.1] 
+[Termination Attempts : 3 1 10 5 
+Sum : 19 , Avg: 4 , Min : 1 , Max : 10 , Diff: 9] 
+[GC Worker End (ms): 1657. 3 1657. 2 1657 . 2 1657 . 2 
+Avg : 1657.2, Min: 1657 . 2, Max : 1657.3, Diff: 0 . 0) 
+[GC Worker (ms) : 38 . 0 38 . 0 38.0 38 . 0 
+Avg : 38 . 0 , Min : 38 . 0 , Max : 38 . 0 , Diff : 0 . 1] 
+[GC Worker Other (ms) : 0.0 0 . 1 0.1 0 . 1 
+Avg : 0.1 , Min : 0 . 0 , Max : 0.1 , Diff : 0.1) 
+[Clear CT : 0.0 ms] 
+[Other : 0 . 4 ms] 
+[Choose CSet : 0. 0 ms] 
+[Ref Proc : 0 . 1 ms] 
+[Ref Enq: 0 . 0 ms] 
+[Free CSet : 0 . 1 ms] 
+[Eden : 32M(35M) - >0B(35M) Survivors : 5120K->5120K Heap : 147M(200M) - >147M 
+(200M )) 
+[Times : user=0 . 16 sys=0 . 00 , real=0 . 04 secs]
+```
+
+--- 
+特点:
+1. 避免在整个Java堆进行全区域的垃圾回收，而是让G1跟踪每个Region的垃圾回收的价值及回收所需的时间，在后台维护一个优先级表。根据用户设定的允许收集停顿时间，优先回收价值收益最大的Region。(使用参数-XX:MaxGCPauseMills指定)
+2. G1收集器每个Region都需要自己的记忆集，记录跨区域引用，因此比其他收集器要耗费内存，大约为java堆内存容量10%~20%。
+3. 通过在Region中划分空间(使用两TAMS指针，标记一块区域)用于并发回收的新对象分配，解决并发标记阶段与用户线程互不干扰。同样若内存分配速度大于内存回收速度，可能冻结用户线程进行Full GC。
+4. CMS使用增量更新算法，而G1使用原始快照(SATB)算法来解决，用户线程改变对象的引用关系，不打破原有的对象图结构，防止标记错误。
+5. 通过可靠停顿预测模型的建立：根据每个Region的回收成本，分析出收集的平均值、标准偏差、置信度等统计信息。
+- 缺点：内存占用过高，在小内存应用上CMS的表现大于G1。
+
+
+常用参数：
+- `-XX:+UseG1GC`：标记打开 GI 集器开关
+- `-XX:G1HeapRegionSize`: 参数Region的大小可通过该参数设定，取值范围为1M~32M，为2的N次幂。
+- `-XX:MaxGCPauseMills`：设置用户设定的允许收集停顿时间使，默认为200毫秒。调的调小会导致每次的回收集只占内存的很小一部分，收集的速度慢于分配的速度导致垃圾堆积，进而引发Full GC。正常设置为100~300毫秒之间。
+- `-XX:ParallelGCThreads`：用于设置并行回收时，GC的工作线程数量。
+- `-XX:InitiatingHeapOccupancyPercent` 参数可以指定当整个堆使用率达到多少时，触发并发标记周期的执行。默认值是45，即当整个堆占用率达到45%时，执行并发标记周期。
+
+
+相关资料：
 [G1官网说明](https://docs.oracle.com/javase/8/docs/technotes/guides/vm/gctuning/g1_gc.html)
 #### <a name="32">CMS 与 G1 对比</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 G1计划作为并发标记扫描收集器（CMS）的长期替代品。
@@ -620,7 +822,8 @@ java相关的三层类加载器
 1. 如果一个类加载器接收到类加载请求，它首先不会自己尝试加载这个类，而是把请求委托到父类执行。
 2. 每一层次的类加载器都会委托其父类加载器去完成，最终传到最顶层的启动类加载器中。
 3. 只有当所有父加载器都无法自己完成这个类加载请求，子加载器才会进行加载。
-- 作用：因为这样可以避免重复加载，当父亲已经加载了该类的时候，就没有必要 ClassLoader 再加载一次。考虑到安全因素，我们试想一下，如果不使用这种委托模式，那我们就可以随时使用自定义的String来动态替代java核心api中定义的类型，这样会存在非常大的安全隐患，而双亲委托的方式，就可以避免这种情况，因为String 已经在启动时就被引导类加载器（Bootstrcp ClassLoader）加载，所以用户自定义的ClassLoader永远也无法加载一个自己写的String，除非你改变 JDK 中 ClassLoader 搜索类的默认算法。
+
+作用：因为这样可以避免重复加载，当父亲已经加载了该类的时候，就没有必要 ClassLoader 再加载一次。考虑到安全因素，我们试想一下，如果不使用这种委托模式，那我们就可以随时使用自定义的String来动态替代java核心api中定义的类型，这样会存在非常大的安全隐患，而双亲委托的方式，就可以避免这种情况，因为String 已经在启动时就被引导类加载器（Bootstrcp ClassLoader）加载，所以用户自定义的ClassLoader永远也无法加载一个自己写的String，除非你改变 JDK 中 ClassLoader 搜索类的默认算法。
 ![avatar](http://ww1.sinaimg.cn/large/8dc363e6ly1g2fwftq83rj20jg0dz3z6.jpg)
 
 相关代码：
@@ -664,7 +867,58 @@ java相关的三层类加载器
     }
 ```
 
-#### <a name="45">自定义类加载器</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="45">双亲委派模型缺陷</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+双亲委派模型很好的解决了各个类加载器协作时基础类型的一致性问题(越基础的类由越上层的类加载器进行加载)\
+双亲委派模型检查类是否己经加载的委托过程是单向的，这种方式虽然从结构上说比较清楚，使各个ClassLoader的职责非常明确，但是同时会带来一个问题，即顶层的ClassLoader无法访问底层的ClassLoader所加载的类。而且**根据类加载机制，当被装载的类引用了另外一个类的时候，虚拟机就会使用装载第一个类的类装载器装载被引用的类。**
+> 通常情况下，启动类加载器中的类为系统核心类，包括一些重要的系统接口，而在应用类加载器中，为应用类。按照这种模式，应用类访问系统类自然是没有问题，但是系统类访应用类就会出现问题。
+
+解决方法：引入从线程上下文获取classLoader
+#### <a name="46">破坏双亲委派模型</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+破坏双亲委派模型，就是要实现自己的ClassLoader重写loadClass，在方法中重写自己加载的逻辑。这样类加载过程中就不会通过委派父类加载的方式进行加载数据。
+
+三次破坏双亲委派模型：
+1. 第一次破坏。JDK1.2时期，双亲委派模型出现前，用户自定义了一些类加载器。在引入双亲委派模型，为了兼容用户自定义的类加载器，添加新的`findClass()`方法，并引导用户重写该方法，而不是重写`loadClass()`方法。
+2. 第二次破坏，为该模型的缺陷导致。父类加载器无法访问底层类加载器负责的类
+3. 第三次破坏，引入热部署的机制。违反双亲委派的类加载过程。
+##### <a name="47">JDBC破坏双亲委派模型</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+不破坏双亲委派模型的情况（不使用JNDI服务）
+```
+// 1.加载数据访问驱动
+Class.forName("com.mysql.cj.jdbc.Driver");
+//2.连接到数据"库"上去
+Connection conn= DriverManager.getConnection("jdbc:mysql://localhost:3306/test?characterEncoding=GBK", "root", "");
+```
+
+JDBC需要破坏双亲委派模式：**根据类加载机制，当被装载的类引用了另外一个类的时候，虚拟机就会使用装载第一个类的类装载器装载被引用的类。**
+>  原生的JDBC中的类是放在**rt.jar包**(对应由启用类加载器BootStrapClassLoader)的，是由启动类加载器进行类加载的，在JDBC中的Driver类中需要动态去加载不同数据库类型的Driver类，而mysql-connector-.jar中的Driver类是用户自己写的代码，那启动类加载器肯定是不能进行加载的。这就是双亲委派模型的局限性了，父级加载器无法加载子级类加载器路径中的类。
+
+
+> 在JDBC4.0以后，开始支持使用SPI(Service Provider Interface)的方式来注册这个Driver，具体做法就是在mysql的jar包中的META-INF/services/java.sql.Driver 文件中指明当前使用的Driver是哪个，然后使用如下：\
+> `Connection conn= DriverManager.getConnection("jdbc:mysql://localhost:3306/test?characterEncoding=GBK", "root", "");`
+
+如何解决父加载器无法加载子级类加载器路径中的类？
+> 引入线程上下文件类加载器(Thread Context ClassLoader).在mysql jdbc连接中获取当前的类加载器，这就破坏的双亲委派的类加载过程。
+```
+private static Connection getConnection(
+    String url, java.util.Properties info, Class<?> caller) throws SQLException {
+    /*
+     * When callerCl is null, we should check the application's
+     * (which is invoking this class indirectly)
+     * classloader, so that the JDBC driver class outside rt.jar
+     * can be loaded from here.
+     */
+    //callerCL为空的时候，其实说明这个ClassLoader是启动类加载器，但是这个启动类加载并不能识别rt.jar之外的类，这个时候就把callerCL赋值为Thread.currentThread().getContextClassLoader();也就是应用程序启动类
+    ClassLoader callerCL = caller != null ? caller.getClassLoader() : null;
+    synchronized(DriverManager.class) {
+        // synchronize loading of the correct classloader.
+        if (callerCL == null) {
+            callerCL = Thread.currentThread().getContextClassLoader();
+        }
+    }
+}
+```
+
+#### <a name="48">自定义类加载器</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 1. 加载非classpath下的类，从非标准的来源加载代码
 2. 加载加密过的类文件，使用秘钥进行解密。
 3. 热部署，简单粗暴的方法是自定义类加载器，加载目录外的类对象。使用定时任务或者触发起的方法，每次创建新的类加载器。
@@ -700,73 +954,34 @@ public class MyClassLoader extends ClassLoader {
 }
 ```
 
-#### <a name="46">破坏双亲委派模型</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
-破坏双亲委派模型，就是要实现自己的ClassLoader重写loadClass，在方法中重写自己加载的逻辑。这样类加载过程中就不会通过委派父类加载的方式进行加载数据。
 
-##### <a name="47">JDBC破坏双亲委派模型</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
-不破坏双亲委派模型的情况（不使用JNDI服务）
-```
-// 1.加载数据访问驱动
-Class.forName("com.mysql.cj.jdbc.Driver");
-//2.连接到数据"库"上去
-Connection conn= DriverManager.getConnection("jdbc:mysql://localhost:3306/test?characterEncoding=GBK", "root", "");
-```
-
-JDBC需要破坏双亲委派模式
->  原生的JDBC中的类是放在**rt.jar包**(对应由启用类加载器BootStrapClassLoader)的，是由启动类加载器进行类加载的，在JDBC中的Driver类中需要动态去加载不同数据库类型的Driver类，而mysql-connector-.jar中的Driver类是用户自己写的代码，那启动类加载器肯定是不能进行加载的。这就是双亲委派模型的局限性了，父级加载器无法加载子级类加载器路径中的类。
-
-> 在JDBC4.0以后，开始支持使用SPI(Service Provider Interface)的方式来注册这个Driver，具体做法就是在mysql的jar包中的META-INF/services/java.sql.Driver 文件中指明当前使用的Driver是哪个，然后使用如下：\
-> `Connection conn= DriverManager.getConnection("jdbc:mysql://localhost:3306/test?characterEncoding=GBK", "root", "");`
-
-如何解决父加载器无法加载子级类加载器路径中的类？
-> 引入线程上下文件类加载器(Thread Context ClassLoader).在mysql jdbc连接中获取当前的类加载器，这就破坏的双亲委派的类加载过程。
-```
-private static Connection getConnection(
-        String url, java.util.Properties info, Class<?> caller) throws SQLException {
-        /*
-         * When callerCl is null, we should check the application's
-         * (which is invoking this class indirectly)
-         * classloader, so that the JDBC driver class outside rt.jar
-         * can be loaded from here.
-         */
-        //callerCL为空的时候，其实说明这个ClassLoader是启动类加载器，但是这个启动类加载并不能识别rt.jar之外的类，这个时候就把callerCL赋值为Thread.currentThread().getContextClassLoader();也就是应用程序启动类
-        ClassLoader callerCL = caller != null ? caller.getClassLoader() : null;
-        synchronized(DriverManager.class) {
-            // synchronize loading of the correct classloader.
-            if (callerCL == null) {
-                callerCL = Thread.currentThread().getContextClassLoader();
-            }
-        }
-    }
-```
-
-### <a name="48">类初始化的时机</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="49">类初始化的时机</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
 虚拟机严格规范了有且只有6种情况下，必须对类进行初始化(只有主动去使用类才会初始化类)：
-1. 当遇到 new、getstatic、putstatic或invokestatic 这4条直接码指令时，比如 new 一个类，读取一个静态字段(未被 final 修饰)、或调用一个类的静态方法时。
+1. 当遇到 `new`、`getstatic`、`putstatic`或`invokestatic` 这4条直接码指令时，比如 new 一个类，读取一个静态字段(未被 final 修饰)、或调用一个类的静态方法时。
 - 当jvm执行new指令时会初始化类。即当程序创建一个类的实例对象。
-- 当jvm执行getstatic指令时会初始化类。即程序访问类的静态变量(不是静态常量，常量会被加载到运行时常量池)。
-- 当jvm执行putstatic指令时会初始化类。即程序给类的静态变量赋值。
-- 当jvm执行invokestatic指令时会初始化类。即程序调用类的静态方法。
-2. 使用 java.lang.reflect 包的方法对类进行反射调用时如Class.forname("..."),newInstance()等等。 ，如果类没初始化，需要触发其初始化。
+- 当jvm执行`getstatic`指令时会初始化类。即程序访问类的静态变量(不是静态常量，常量会被加载到运行时常量池)。
+- 当jvm执行`putstatic`指令时会初始化类。即程序给类的静态变量赋值。
+- 当jvm执行`invokestatic`指令时会初始化类。即程序调用类的静态方法。
+2. 使用 java.lang.reflect 包的方法对类进行反射调用时如`Class.forname("...").newInstance()`等等。如果类没初始化，需要触发其初始化。
 3. 初始化一个类，如果其父类还未初始化，则先触发该父类的初始化。
 4. 当虚拟机启动时，用户需要定义一个要执行的主类 (包含 main 方法的那个类)，虚拟机会先初始化这个类。
-5. MethodHandle和VarHandle可以看作是轻量级的反射调用机制，而要想使用这2个调用， 就必须先使用findStaticVarHandle来初始化要调用的类。
+5. MethodHandle和VarHandle可以看作是轻量级的反射调用机制，而要想使用这2个调用， 就必须先使用`findStaticVarHandle`来初始化要调用的类。
 6. 当一个接口中定义了JDK8新加入的默认方法（被default关键字修饰的接口方法）时，如果有这个接口的实现类发生了初始化，那该接口要在其之前被初始化。
 
 
-### <a name="49">类的生命周期</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="50">类的生命周期</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 类的生命周期： 加载、连接[验证、准备、解析]、初始化、使用、卸载。
-#### <a name="50">加载</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="51">加载</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 类加载过程的第一步，主要完成下面3件事情：
 1. 通过全类名获取定义此类的二进制字节流
 2. 将字节流所代表的静态存储结构转换为方法区的运行时数据结构
 3. 在内存中生成一个代表该类的 Class 对象,作为方法区这些数据的访问入口
 
-#### <a name="51">验证</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="52">验证</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 验证的范围：文件格式、元数据、字节码、符号引用验证
 
-#### <a name="52">准备</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="53">准备</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 准备阶段是正式为类变量(即静态变量)分配内存并设置类变量初始值的阶段，jdk8中这些内存都将在java堆中分配。对于该阶段有以下几点需要注意：
 - 进行内存分配的仅包括类变量（static），而不包括实例变量
 - 这里所设置的初始值"通常情况"下是数据类型默认的零值（如0、0L、null、false等）
@@ -780,7 +995,7 @@ public static final int v = 8080;
 
 ```
 
-#### <a name="53">解析</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="54">解析</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 解析阶段是虚拟机将常量池内的符号引用替换为直接引用的过程。解析动作主要针对类或接口、字段、类方法、接口方法、方法类型、方法句柄和调用限定符7类符号引用进行。
 
 
@@ -790,13 +1005,13 @@ public static final int v = 8080;
 3. 同上在类C的父类查找直接引用。
 4. 上述简述了类的查找，具体细节见书本。返回直接引用后，会验证方法的访问权限，即`private、protected、public`，如果发现不具备方法的访问级别，抛出`IllegalAccessError`异常。
 
-#### <a name="54">初始化</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="55">初始化</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 类的初始化阶段是类加载过程的最后一个步骤，这个阶段Java虚拟机才开始真正执行类中编写的java程序，将主导权移交给应用程序。
 
 在准备阶段已经赋初始化零值的变量，在初始化阶段，会根据程序去初始化类变量和其他资源。\
 初始化阶段就是执行类构造器`<clinit>()`方法的过程。该方法是由编译器收集类中的所有类变量的赋值动作和静态语句块（static{}块）中的语句合并产生的。
 
-#### <a name="55">卸载</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="56">卸载</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 卸载类即该类的Class对象被GC。
 
 卸载类需要满足3个要求:
@@ -805,7 +1020,7 @@ public static final int v = 8080;
 - 该类的类加载器的实例已被GC
 
 
-## <a name="56">对象创建及使用</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+## <a name="57">对象创建及使用</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
 ![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/basic/objcreate.jpg)
 
@@ -816,7 +1031,7 @@ public static final int v = 8080;
 4. 设置对象头：进行对象的必要设置如那个类的示例、hashcode、GC分代年龄等信息，这些信息存放在对象头中。
 5. 上述工作完成之后，java开始调用对象的构造函数。
 
-### <a name="57">对象分配内存的方式</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="58">对象分配内存的方式</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 - 规整空间：指针碰撞，整理过内存用一个指针标记内存使用过的范围，后序分配内存只需要移动指针，仅把指针向空闲空间移动一段与对象大小相等的距离。
 - 碎片空间：空闲链表(free list)，通过额外的维护的列表存储记录空闲的地址，将随机IO变为顺序IO，但带来了额外的空间消耗。
 > 使用Serial、ParNew等带压缩过程的垃圾回收器，使用指针分配算法。而CMS这种基于清除的算法理论上使用空闲链表的方式分配。
@@ -826,7 +1041,7 @@ public static final int v = 8080;
 - 本地线程分配缓冲(Thread Local Allocation Buffer,TLAB) ，每个线程在Java堆中预先分配一小块内存，基于 CAS 的独享线程（Mutator Threads）可以优先将对象分配在 Eden 中的一块内存，因为是 Java 线程独享的内存区没有锁竞争，所以分配速度更快，每个 TLAB 都是一个线程独享的。
 
 
-### <a name="58">对象内存分布</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="59">对象内存分布</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 ![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/jvm/object-head.jpg)
 对象在堆内存中的存储布局可以分为三部分：对象头、实例数据（对象有效信息）和对齐填充（仅起占位符作用）\
 
@@ -834,13 +1049,13 @@ Hotspot的对象头包括两部分信息：
 1. 第一部分：存储对象自身的运行数据，如HashCode、GC分代年龄、锁状态标志、线程持有的锁、偏向线程ID等。
 2. 第二部分：类型指针，即对象指向它的类型愿数据的指针。
 
-### <a name="59">对象的访问</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="60">对象的访问</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 定义：java程序会通过栈上的reference数据来操作堆上的具体对象。具体的对象访问方式由虚拟机决定，主要有两种使用句柄和直接指针两种。
 - 使用句柄访问的话，java堆会划分一块内存作为句柄池。引用会指向句柄，而句柄中分为两块指针，一个是指向对象实例的指针，一个是指向对象类型数据的指针(指向方法区)。好处为整理内存是只需要整理实例的指针。
 - 直接指针访问，引用直接指向堆中的对象实例，而对象实例中包含数据的类型数据的指针(指向方法区)，好处为减少了指向实例的时间定为开销。
 > HotSpot虚拟机主要使用第二种方式进行访问。
 
-### <a name="60">对象引用</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="61">对象引用</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 - 强引用(Strongly Reference): Object obj = new Object()。关系存在虚拟机就不会回收。
 - 软引用(Soft Reference)：用来描述一些还有用但非必须的对象。在系统要发生内存溢出会收集软引用对象，若回收完成仍内存不足，才抛出内存遗传。软引用可用于实现内存敏感缓存，其中内存管理是一个非常重要的因素。
 - 弱引用(Weak Reference)：弱引用关联的对象只能生存到下一次垃圾收集发生为止。
@@ -918,11 +1133,11 @@ class LargeObjectFinalizer extends PhantomReference<Object> {
 ```
 
 
-### <a name="61">栈上分配</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="62">栈上分配</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 栈上分配是Java虚拟机的一项优化技术，基本思想是对于那些线程私有的对象(指不能被其他线程访问到的对象)，可以把他们打散分配在栈上，而不是分配在堆上。
 > 分配在对象上的好处是可以在函数调用结束后自行销毁，而不需要垃圾回收器的介入，从而提高系统的性能
 
-#### <a name="62">逃逸分析</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="63">逃逸分析</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 逃逸分析是编译语言中的一种优化分析，而不是一种优化的手段。通过对象的作用范围的分析，为其他优化手段提供分析数据从而进行优化。
 > 目的是判断对象的作用域是否可能逃逸出函数体
 
@@ -935,12 +1150,12 @@ class LargeObjectFinalizer extends PhantomReference<Object> {
 参考文献：\
 [逃逸分析官网解答](https://docs.oracle.com/javase/7/docs/technotes/guides/vm/performance-enhancements-7.html#escapeAnalysis)
 
-#### <a name="63">标量替换</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="64">标量替换</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 标量可以理解成一种不可分解的变量，如java内部的基本数据类型、引用类型等。 与之对应的聚合量是可以被拆解的，如对象。
 
 当通过逃逸分析一个对象只会作用于方法内部，虚拟机可以通过使用标量替换来进行优化。
 
-#### <a name="64">应用</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="65">应用</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 - `-XX:+DoEscapeAnalysis`：用于开启逃逸分析
 - `-XX:+EliminateAllocations`：用于开启标量替换，允许将对象打散分配在栈上
 ```java
@@ -972,7 +1187,7 @@ public class OnStackTest {
 ```
 如果关闭逃逸分析或者标量替换的任何一个，再次执行程序就会看到大量的GC日志，说明栈上分配依赖逃逸分析和标亮替换的实现。
 
-### <a name="65">TLAB</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="66">TLAB</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 TLAB，全称Thread Local Allocation Buffer, 即：线程本地分配缓存。这是一块线程专用的内存分配区域。TLAB占用的是eden区的空间。在TLAB启用的情况下（默认开启），JVM会为每一个线程分配一块TLAB区域。
 
 
@@ -995,7 +1210,7 @@ JVM选择的策略是：在虚拟机内部维护一个叫refill_waste的值，�
 | -XX:-ResizeTLAB	| 禁止系统自动调整TLAB大小	 |
 | -XX:TLABSize | 	指定TLAB大小	| 单位：B |
 
-### <a name="66">对象内存分配流程</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="67">对象内存分配流程</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 java对象分配流程
 1. 首先运行栈上分配。编译器通过逃逸分析及标量替换，决定对象应该分配在栈上还是堆中。如果逃逸分析及标量替换其中一个未启用，则直接分配在堆中。如果决定分配在堆中，那么执行步骤2
 2. 进行TLAB分配。如果TLAB的空间`TALB_TOP+SIZE <= TLAB_END`，对象可以直接分配在TLAB中，那么`TLAB_TOP`加上对象`SIZE`进行位置移动。若不能执行步骤3
@@ -1004,13 +1219,15 @@ java对象分配流程
 5. 将对象存储在新声代`Eden`中，`EDEN_TOP`指针移位。若新声代无法存储对象，执行`Young GC`，并尝试重新分配对象。
 6. `Young GC` 后重新分配对象，若仍然无法分配。对象直接进入老年代。
 
+![image](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/jvm/object-alloc.png)
+
 
 - [JVM About Object Distribution In Pile, Stack, TLAB](https://programmerall.com/article/46551700936/)
 - [JVM之对象分配：栈上分配 & TLAB分配](https://www.cnblogs.com/BlueStarWei/p/9358757.html)
 
-## <a name="67">JDK编译期</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+## <a name="68">JDK编译期</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
-### <a name="68">编译期做的工作</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="69">编译期做的工作</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
 1. 默认构造器： 经过编译的代码,可以看到在编译阶段，如果我们没有添加构造器。那么Java编译器会为我们添加一个无参构造方法。
 2. 自动拆装箱
@@ -1026,7 +1243,7 @@ java对象分配流程
 
 相关资料： [Java编译期处理](https://blog.csdn.net/gyhdxwang/article/details/104396476)
 
-## <a name="69">堆内存的设置要点</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+## <a name="70">堆内存的设置要点</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 1. 新生代的内存大小设置建议：Sun官方推荐配置为整个堆的3/8。
 2. 服务器的内存需要预留一部分给永久代、线程栈及NIO
 
@@ -1073,9 +1290,9 @@ java -Xmx3550m -Xms3550m -Xmn2g -Xss128k -XX:ParallelGCThreads=20 -XX:+UseConcMa
 
 相关文章：[看完你还敢说你懂JVM吗？](https://zhuanlan.zhihu.com/p/61049063?utm_source=wechat_session)
 
-## <a name="70">CMS + ParNew收集器的流程梳理</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+## <a name="71">CMS + ParNew收集器的流程梳理</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
-### <a name="71">young区域(年轻代)</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="72">young区域(年轻代)</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 1. 对象首先分配到Eden，分配满了触发Young Gc(Minor Gc)，基于复制交换算法，晋升对象年龄+1。
 ![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/basic/edenGc.jpg)
 2. 年龄到达老年代门槛的晋升老年代。
@@ -1091,8 +1308,8 @@ java -Xmx3550m -Xms3550m -Xmn2g -Xss128k -XX:ParallelGCThreads=20 -XX:+UseConcMa
     > 在发生 Minor GC 之前，虚拟机必须先检查老年代最大可用的连续空间是否大于新生代所有对象总空间，如果这个条件成立，那这一次 Minor GC 可以确保是安全的。如果不成立，则虚拟机会先查看 - XX:HandlePromotionFailure 参数的设置值是否允许担保失败 (Handle Promotion Failure)；如果允许，那会继续检查老年代最大可用的连续空间是否大于历次晋升到老年代对象的平均大小，如果大于，将尝试进行一次 Minor GC，尽管这次 Minor GC 是有风险的；如果小于，或者-XX: HandlePromotionFailure设置不允许冒险，那这时就要改为进行一次 Full GC。
 
 
-### <a name="72">old区域(老年代)</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
-#### <a name="73">CMS GC原因</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="73">old区域(老年代)</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="74">CMS GC原因</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 触发 CMS GC有：
 1. Old 区达到回收阈值
 2. MetaSpace 空间不足
@@ -1102,7 +1319,7 @@ java -Xmx3550m -Xms3550m -Xmn2g -Xss128k -XX:ParallelGCThreads=20 -XX:+UseConcMa
 6. 显式调用System.gc
 7. 并发模式失败(浮动垃圾导致)
 
-#### <a name="74">CMS GC 垃圾回收模式</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="75">CMS GC 垃圾回收模式</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 CMS GC 的垃圾回收共分为 Background 和 Foreground 两种模式，
 - Background： 正常的CMS收集过程，初始标记、并发标记、重新标记、标记清除
 - Foreground： 会进行一次压缩式 GC，使用 MSC（Mark-Sweep-Compact）做 Full GC。收集的范围是 Java 堆的 Young 区和 Old 区以及 MetaSpace，会带来非常长的 STW。
@@ -1110,7 +1327,7 @@ CMS GC 的垃圾回收共分为 Background 和 Foreground 两种模式，
 
 CMS 在Background回收的过程中，STW 的阶段主要是 Init Mark 和 Final Remark 这两个阶段
 - 初始标记 Init Mark ： 整个过程比较简单，从 GC Root 出发标记 Old 中的对象，处理完成后借助 BitMap 处理下 Young 区对 Old 区的引用，整个过程基本都比较快，很少会有较大的停顿。
-- 最终标记 Final Remark ：Final Remark 的开始阶段与 Init Mark 处理的流程相同，但是后续多了 **Card Table 遍历**、**Reference 实例的清理**并将其加入到 Reference 维护的 pend_list 中，如果要收集元数据信息，还要清理 SystemDictionary、CodeCache、SymbolTable、StringTable 等组件中不再使用的资源
+- 最终标记 Final Remark ：Final Remark 的开始阶段与 Init Mark 处理的流程相同，但是后续多了 **Card Table遍历**、**Reference 实例的清理**并将其加入到 Reference 维护的 pend_list 中，如果要收集元数据信息，还要清理 SystemDictionary、CodeCache、SymbolTable、StringTable 等组件中不再使用的资源
 > Final Remark 是最终的第二次标记，这种情况只有在 Background GC 执行了 InitialMarking 步骤的情形下才会执行,如果是 Foreground GC 执行的 InitialMarking 步骤则不需要再次执行 FinalRemark。
 
 
@@ -1118,19 +1335,19 @@ CMS 在Background回收的过程中，STW 的阶段主要是 Init Mark 和 Final
 - 带压缩动作的算法，称为 MSC，上面我们介绍过，使用标记-清理-压缩，单线程全暂停的方式，对整个堆进行垃圾收集，也就是真正意义上的 Full GC，暂停时间要长于普通 CMS。
 - 不带压缩动作的算法，收集 Old 区，和普通的 CMS 算法比较相似，暂停时间相对 MSC 算法短一些。
 
-#### <a name="75">其他老年代问题</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="76">其他老年代问题</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
  CMS 无法处理浮动垃圾（Floating Garbage）。CMS 的并发清理阶段，应用还在运行，因此不断有新的垃圾产生，而这些垃圾不在这次清理标记的范畴里，无法在本次 GC 被清除掉，这些就是浮动垃圾，除此之外在 Remark 之前那些断开引用脱离了读写屏障控制的对象也算浮动垃圾。
 
-### <a name="76">相关文章</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="77">相关文章</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 [图解垃圾回收](https://www.cnblogs.com/hynblogs/p/12292345.html)
 
-## <a name="77">Java虚拟机内存调优</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+## <a name="78">Java虚拟机内存调优</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 jdk1.8前的参数设置
  ![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/basic/jvmParameter.jpg)
  ![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/basic/jvmGCType.jpg)
 
 
-### <a name="78">基本概念重述</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="79">基本概念重述</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
 跨代引用解决方案
 
@@ -1142,15 +1359,15 @@ Card Table：中文翻译为卡表，主要是用来标记卡页的状态，每�
 
 Mutator：生产垃圾的角色，也就是我们的应用程序，垃圾制造者，通过 Allocator 进行 allocate 和 free。
 
-#### <a name="79">工具整理</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="80">工具整理</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
-##### <a name="80">命令行终端</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="81">命令行终端</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
 标准终端类：jps、jinfo、jstat、jstack、jmap
 
 功能整合类：jcmd、vjtools、arthas、greys
 
-##### <a name="81">可视化界面</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="82">可视化界面</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
 简易：JConsole、JVisualvm、HA、GCHisto、GCViewer
 
@@ -1159,10 +1376,10 @@ Mutator：生产垃圾的角色，也就是我们的应用程序，垃圾制造�
 命令行推荐 Arthas ，可视化界面推荐 JProfiler，此外还有一些在线的平台 gceasy、heaphero、fastthread ，美团内部的 Scalpel（一款自研的 JVM 问题诊断工具，暂时未开源）也比较好用。
 
 
-### <a name="82">GC 调优目的</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="83">GC 调优目的</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 将转移到老年代的对象数量降低到最小； 减少 GC 的执行时间。
 
-### <a name="83">GC 调优策略</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="84">GC 调优策略</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 **策略 1**：将新对象预留在新生代，由于 Full GC 的成本远高于 Minor GC，因此尽可能将对象分配在新生代是明智的做法，实际项目中根据 GC 日志分析新生代空间大小分配是否合理，适当通过“-Xmn”命令调节新生代大小，最大限度降低新对象直接进入老年代的情况。
 
 **策略 2**：大对象进入老年代，虽然大部分情况下，将对象分配在新生代是合理的。但是对于大对象这种做法却值得商榷，大对象如果首次在新生代分配可能会出现空间不足导致很多年龄不够的小对象被分配的老年代，破坏新生代的对象结构，可能会出现频繁的 full gc。因此，对于大对象，可以设置直接进入老年代（当然短命的大对象对于垃圾回收来说简直就是噩梦）。-XX:PretenureSizeThreshold 可以设置直接进入老年代的对象大小。
@@ -1176,12 +1393,12 @@ Mutator：生产垃圾的角色，也就是我们的应用程序，垃圾制造�
 >MinorGC 执行时间不到50ms； Minor GC 执行不频繁，约10秒一次； Full GC 执行时间不到1s； Full GC 执行频率不算频繁，不低于10分钟1次。
 
 
-### <a name="84">调优指标</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="85">调优指标</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 - 延迟（Latency）：也可以理解为最大停顿时间，即垃圾收集过程中一次 STW 的最长时间，越短越好，一定程度上可以接受频次的增大，GC 技术的主要发展方向。
 
 - 吞吐量（Throughput）：应用系统的生命周期内，由于 GC 线程会占用 Mutator 当前可用的 CPU 时钟周期，吞吐量即为 Mutator 有效花费的时间占系统总运行时间的百分比，例如系统运行了 100 min，GC 耗时 1 min，则系统吞吐量为 99%，吞吐量优先的收集器可以接受较长的停顿。
 
-### <a name="85">问题排查思路</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="86">问题排查思路</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 四种分析思路
 
 - 时序分析：先发生的事件是根因的概率更大，通过监控手段分析各个指标的异常时间点，还原事件时间线，如先观察到 CPU 负载高（要有足够的时间 Gap），那么整个问题影响链就可能是：
@@ -1196,15 +1413,15 @@ Mutator：生产垃圾的角色，也就是我们的应用程序，垃圾制造�
 - 反证分析：对其中某一表象进行反证分析，即判断表象的发不发生跟结果是否有相关性，例如我们从整个集群的角度观察到某些节点慢查和 CPU 都正常，但也出了问题，那么整个问题影响链就可能是：
 > GC 耗时增大 -> 线程 Block 增多 ->  RT 上涨。
 
-### <a name="86">案例</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
-#### <a name="87">美团技术案例（基于CMS JDK1.8）</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+### <a name="87">案例</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="88">美团技术案例（基于CMS JDK1.8）</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
 ![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/basic/gcProcess.jpg)
 
 ![avatar](https://gitee.com/rbmon/file-storage/raw/main/learning-note/learning/basic/localIssue.png)
 
 
-##### <a name="88">场景一：动态扩容引起的空间震荡</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="89">场景一：动态扩容引起的空间震荡</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 服务刚刚启动时 GC 次数较多，最大空间剩余很多但是依然发生 GC， GC Cause 一般为 Allocation Failure，且在 GC 日志中会观察到经历一次 GC ，堆内各个空间的大小会被调整。
 
 解决：尽量将成对出现的空间大小配置参数设置成固定的，
@@ -1213,7 +1430,7 @@ Mutator：生产垃圾的角色，也就是我们的应用程序，垃圾制造�
 策略：保证 Java 虚拟机的堆是稳定的，避免弹性伸缩带来的额外 GC 消耗，确保 -Xms 和 -Xmx 设置的是一个值（即初始值和最大值一致），获得一个稳定的堆，同理在 MetaSpace 区也有类似的问题
 > 在不追求停顿时间的情况下震荡的空间也是有利的，可以动态地伸缩以节省空间，例如作为富客户端的 Java 应用。
 
-##### <a name="89">场景二：显式 GC 的去与留 (System.gc)</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="90">场景二：显式 GC 的去与留 (System.gc)</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 除了扩容缩容会触发 CMS GC 之外，还有
  1. Old 区达到回收阈值.
  2. MetaSpace 空间不足
@@ -1241,7 +1458,7 @@ CMS GC 共分为 Background 和 Foreground 两种模式，
 
 > 不止 CMS，在 G1 或 ZGC中开启 ExplicitGCInvokesConcurrent 模式，都会采用高性能的并发收集方式进行收集，不过还是建议在代码规范方面也要做好约束，规范好 System.gc 的使用。
 
-##### <a name="90">场景三：MetaSpace 区 OOM</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="91">场景三：MetaSpace 区 OOM</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 现象：JVM 在启动后或者某个时间点开始，MetaSpace 的已使用大小在持续增长，同时每次 GC 也无法释放，调大 MetaSpace 空间也无法彻底解决。
 
 --- 
@@ -1263,7 +1480,7 @@ MetaSpace 弹性伸缩：由于 MetaSpace 空间和 Heap 并不在一起，所�
 策略： 给 MetaSpace 区的使用率加一个监控，如果指标有波动提前发现并解决问题。
 
 
-##### <a name="91">场景四：过早晋升 </a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="92">场景四：过早晋升 </a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 现象：
 1. 分配速率接近于晋升速率，对象晋升年龄较小
 2. Full GC 比较频繁，且经历过一次 GC 之后 Old 区的变化比例非常大。
@@ -1287,12 +1504,12 @@ MetaSpace 弹性伸缩：由于 MetaSpace 空间和 Heap 并不在一起，所�
 - 偶发较大：通过内存分析工具找到问题代码，从业务逻辑上做一些优化。
 - 一直较大：当前的 Collector 已经不满足 Mutator 的期望了，这种情况要么扩容 Mutator 的 VM，要么调整 GC 收集器类型或加大空间。
 
-##### <a name="92">场景五：CMS Old GC 频繁 </a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="93">场景五：CMS Old GC 频繁 </a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 现象：Old 区频繁的做 CMS GC，但是每次耗时不是特别长，整体最大 STW 也在可接受范围内，但由于 GC 太频繁导致吞吐下降比较多。
  
 > 描述过于抽象，见文章
 
-##### <a name="93">场景六：单次 CMS Old GC 耗时长</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="94">场景六：单次 CMS Old GC 耗时长</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 CMS 在回收的过程中，STW 的阶段主要是 Init Mark 和 Final Remark 这两个阶段
 - 初始标记 Init Mark ： 整个过程比较简单，从 GC Root 出发标记 Old 中的对象，处理完成后借助 BitMap 处理下 Young 区对 Old 区的引用，整个过程基本都比较快，很少会有较大的停顿。
 - 最终标记 Final Remark ：Final Remark 的开始阶段与 Init Mark 处理的流程相同，但是后续多了 **Card Table 遍历**、**Reference 实例的清理**并将其加入到 Reference 维护的 pend_list 中，如果要收集元数据信息，还要清理 SystemDictionary、CodeCache、SymbolTable、StringTable 等组件中不再使用的资源
@@ -1306,7 +1523,7 @@ CMS 在回收的过程中，STW 的阶段主要是 Init Mark 和 Final Remark �
     - scrub symbol table 表示清理元数据符号引用耗时，观察 MetaSpace 区的历史使用峰值，看是否有使用动态类加载或者 DSL 处理等。
         - > 如果MateSpace 数据没啥变化，可以通过 -XX:-CMSClassUnloadingEnabled 来避免 MetaSpace 的处理。
  
-##### <a name="94">场景七：内存碎片&收集器退化</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="95">场景七：内存碎片&收集器退化</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 现象：
 并发的 CMS GC 算法，退化为 Foreground 单线程串行 GC 模式，STW 时间超长，有时会长达十几秒。其中 CMS 收集器退化后单线程串行 GC 算法有两种：
 - 带压缩动作的算法，称为 MSC，上面我们介绍过，使用标记-清理-压缩，单线程全暂停的方式，对整个堆进行垃圾收集，也就是真正意义上的 Full GC，暂停时间要长于普通 CMS。
@@ -1332,7 +1549,7 @@ CMS 在回收的过程中，STW 的阶段主要是 Init Mark 和 Final Remark �
 - 浮动垃圾：视情况控制每次晋升对象的大小，或者缩短每次 CMS GC 的时间，必要时可调节 NewRatio 的值。另外就是使用 -XX:+CMSScavengeBeforeRemark 在过程中提前触发一次 Young GC，防止后续晋升过多对象。
 
 
-##### <a name="95">场景八：堆外内存 OOM</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="96">场景八：堆外内存 OOM</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 现象： 内存使用率不断上升，甚至开始使用 SWAP 内存，同时可能出现 GC 时间飙升，线程被 Block 等现象，通过 top 命令发现 Java 进程的 RES 甚至超过了 -Xmx 的大小。
 
 JVM 的堆外内存泄漏，主要有两种的原因：
@@ -1342,27 +1559,27 @@ JVM 的堆外内存泄漏，主要有两种的原因：
 策略： 在项目中添加 -XX:NativeMemoryTracking=detail JVM参数后重启项目（需要注意的是，打开 NMT 会带来 5%~10% 的性能损耗）。使用命令 jcmd pid VM.native_memory detail 查看内存分布。
     
 
-##### <a name="96">场景九：JNI 引发的 GC 问题</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+##### <a name="97">场景九：JNI 引发的 GC 问题</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 
 > 太抽象了
 
-#### <a name="97">不恰当的数据结构导致内存过大</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="98">不恰当的数据结构导致内存过大</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 场景：-Xms4g -Xmx8g -Xmn1g 使用ParNew + CMS组合。业务上需要10min加载80MB的数据到内存，会产生100W HashMap entry， Minor GC超过500ms，因为新生代使用了标记复制算法\
 
 方案：不从修改程序，仅从GC调优，可以直接去掉SurvivorRatio，让新生代存活的对象一次Minor GC就进入到老年代` -XX:SurvivorRatio=65536 -XX:MaxTenuringThreshold=0`（或者-XX:+AlwaysTenure)
-#### <a name="98">堆外内存导致溢出错误</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="99">堆外内存导致溢出错误</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 NIO使用直接内存复制，而虚拟机中最大最小内存直接设值成系统内存大小了
 
-#### <a name="99">异步系统Socket连接</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="100">异步系统Socket连接</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 Socket 使用BIO连接异步处理，导致了系统连接数过多，进而虚拟机崩溃
 
-#### <a name="100">Evosuite 自动生成单元测试</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="101">Evosuite 自动生成单元测试</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 表现：maven build时候单元测试需要一个多小时。
 
 排查：
-1. jstat -gc pid 结合日志观察GC情况。
-2. jstack -l pid 刷具体的运行线程。
-3. jmap -heap pid 导出堆的分配情况
+1. `jstat -gc pid` 结合日志观察GC情况。
+2. `jstack -l pid` 刷具体的运行线程。
+3. `jmap -heap pid` 导出堆的分配情况
 
 原因为Evosuite自动生成的test中存在：
 1. StringUtils的expend测试，延长字符串到1610613374长度。jdk8，String内部使用char数组。
@@ -1377,12 +1594,12 @@ YGC出现大量复制工作，很耗费时间。每次分配的空间过大，�
 
 解决处理：死循环线程、修改自动生成的test分配合理内存。
 
-#### <a name="101">其他案例分析资料</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="102">其他案例分析资料</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 - [JSP引起的老年代不回收场景](https://blog.csdn.net/u012948161/article/details/102983795?utm_medium=distribute.pc_relevant.none-task-blog-BlogCommendFromMachineLearnPai2-1.control&depth_1-utm_source=distribute.pc_relevant.none-task-blog-BlogCommendFromMachineLearnPai2-1.control)
 - [native memory](http://mahaijin.github.io/2015/04/27/JVM%E7%9A%84Heap%20Memory%E5%92%8CNative%20Memory/)
 - [美团：Java中9种常见的CMS GC问题分析与解决](https://mp.weixin.qq.com/s/RFwXYdzeRkTG5uaebVoLQw)
 
-#### <a name="102">其他建议</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
+#### <a name="103">其他建议</a><a style="float:right;text-decoration:none;" href="#index">[Top]</a>
 1. 禁用偏向锁：偏向锁在只有一个线程使用到该锁的时候效率很高，但是在竞争激烈情况会升级成轻量级锁，此时就需要先消除偏向锁，这个过程是 STW 的。
     > 在已知并发激烈的前提下，一般会禁用偏向锁 -XX:-UseBiasedLocking 来提高性能。
 2. 主动式 GC： 观测 Old 区的使用情况，即将到达阈值时将应用服务摘掉流量，手动触发一次 Major GC。必要时引入，会影响系统健壮性。
